@@ -1,3 +1,10 @@
+2011-07-14  Ramon Novoa  <rnovoa@artica.es>
+
+	* modules/pandora_module.h,
+	  modules/pandora_module_factory.cc,
+	  modules/pandora_module.cc: Set additional module configuration
+	  parameters from the XML.
+
 2011-05-06  Vanessa Gil <vanessa.gil@artica.es>
 
 	* win32/pandora.cc: Fixed: Windows agent log and system time are unsynchronized.
